# RAG_Solution

./: .gitignore  main.py  pyproject.toml  requirements.txt
01-DataIngestionParsing/: 01_DataIngestion.ipynb  02_pdffile_parser.ipynb  03_dataparshing_docs.ipynb  04_csvexcel_parshing.ipynb  05_jsonparsing.ipynb  06_sqldatabase_parsing.ipynb
